# data-structure

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py
application/include/: array.h  dequeue.h  hash_table.h  list.h  queue.h  set.h  trie_hash.h  vector.h
application/src/: main.cpp
test/: ArrayTest.cpp  DequeueTest.cpp  HashTable.cpp  ListTest.cpp  QueueTest.cpp  SetTest.cpp  TrieHashTest.cpp  VectorTest.cpp
